--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cd client && npm run build && cd .."
   },
   "dependencies": {
-    "aws-sdk": "^2.181.0",
+    "aws-sdk": "^2.224.1",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
     "connect-ensure-login": "^0.1.1",
@@ -20,12 +20,12 @@
     "express-authz": "^1.0.1",
     "express-session": "^1.15.6",
     "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8",
+    "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "~2.0.0-beta11",
+    "pug": "^2.0.3",
     "serve-favicon": "~2.4.2",
-    "uuid": "^3.1.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.1"
