--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.6.1",
     "pug": "^2.0.3",
     "serve-favicon": "~2.4.2",
     "uuid": "^3.2.1"
