--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,6 +4,10 @@
         "react/jsx-filename-extension": "off",
         "react/no-string-refs": "off",
         "jsx-a11y/anchor-is-valid": "off",
-        "no-undef": "off"
+        "jsx-a11y/href-no-hash": "off",
+        "quotes": "off"
+    },
+    "globals": {
+        "document": false
     }
 }
