--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "~4.15.2",
     "express-authz": "^1.0.1",
     "express-session": "^1.15.6",
-    "morgan": "~1.8.1",
+    "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
