--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "~4.15.2",
     "express-authz": "^1.0.1",
     "express-session": "^1.15.6",
+    "express-validation": "^0.4.5",
+    "joi": "^7.3.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
